--- a/src/app/ships/ships.component.html
+++ b/src/app/ships/ships.component.html
@@ -2,6 +2,7 @@
 
 <app-starships-list
   [starships]="starships"
+  [disableButton]="disableButton"
   (fetchNext)="fetchNext($event)"
 ></app-starships-list>
 
