--- a/src/app/ships/starships-list/starship/starship.component.html
+++ b/src/app/ships/starships-list/starship/starship.component.html
@@ -3,6 +3,14 @@
     <h3 class="panel-title">{{ starship.name }}</h3>
   </div>
   <div class="panel-body">
-    <img [src]="'https://starwars-visualguide.com/assets/img/starships/' + starship.shipId + '.jpg' | imageSanitizer" class="ship--image">
+    <img
+      [src]="
+        'https://starwars-visualguide.com/assets/img/starships/' +
+          starship.shipId +
+          '.jpg' | imageSanitizer
+      "
+      class="ship--image"
+      appShipImage
+    />
   </div>
 </div>
