--- a/src/app/ships/starships-list/starships-list.component.html
+++ b/src/app/ships/starships-list/starships-list.component.html
@@ -4,4 +4,4 @@
   </div>
 </div>
 
-<button (click)="fetchNextPage()" class="btn btn-primary">Más datos</button>
+<button (click)="fetchNextPage()" class="btn btn-primary" [disabled]="disableButton">Más datos</button>
