Ficha de naves. Incorporado control de peticiones individualizado al usuario.

--- a/src/app/ships/starships-list/starship/starship.component.html
+++ b/src/app/ships/starships-list/starship/starship.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default ship">
+<div class="panel panel-default ship" (click)="navigateToCard(starship.shipId)">
   <div class="panel-heading">
     <h3 class="panel-title">{{ starship.name }}</h3>
   </div>
