Estilos parecidos a Massimo Dutti. Solucionado atras con petición prohibida.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navBar__bar" *ngIf="isAuthenticated">
+<div class="navBar__bar u-margin-bottom-medium" *ngIf="isAuthenticated">
   <div class="navBar__buttons">
     <a
       class="navBar__link"
