--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,6 @@
 
 @import "./sass/base/base";
 @import "./sass/base/typography";
+@import "./sass/base/utilities";
 
 @import "./sass/layout/general";
