--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,6 +1,8 @@
 .navBar {
   &__bar {
-    margin: 2rem 0;
+    margin-top: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid rgb(194, 194, 194);
     @media (min-width: 992px) {
       & {
       }
