--- a/src/app/ships/ship-card/ship-card.component.html
+++ b/src/app/ships/ship-card/ship-card.component.html
@@ -19,7 +19,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button class="btn btn-primary" (click)="goBack()">Atras</button>
+    <button class="btn btn-primary shipcardList_button" (click)="goBack()">Atras</button>
   </mat-card-actions>
 </mat-card>
 <div class="alert alert-danger" role="alert" *ngIf="error">
