Página pruebas añadida

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,6 +8,12 @@
     >
     <a
       class="navBar__link"
+      [routerLink]="['/test']"
+      routerLinkActive="active-link"
+      >Prueba</a
+    >
+    <a
+      class="navBar__link"
       [routerLink]="['/logo']"
       routerLinkActive="active-link"
       ><div class="navBar__logo-box">
