--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -30,7 +30,7 @@
     display: table-cell;
     text-align: center;
     &:first-child {
-      width: 40%;
+      width: 20%;
       @media (min-width: 992px) {
         & {
           text-align: left;
@@ -39,8 +39,16 @@
     }
     &:nth-child(2) {
       width: 20%;
+      @media (min-width: 992px) {
+        & {
+          text-align: left;
+        }
+      }
     }
     &:nth-child(3) {
+      width: 20%;
+    }
+    &:nth-child(4) {
       width: 40%;
       @media (min-width: 992px) {
         & {
