--- a/src/app/ships/ship-card/ship-card.component.html
+++ b/src/app/ships/ship-card/ship-card.component.html
@@ -23,5 +23,5 @@
   </mat-card-actions>
 </mat-card>
 <div class="alert alert-danger" role="alert" *ngIf="error">
-  Ha habido un error al hacer la petición
+  No puedes hacer la misma petición en un mismo rango de 5 minutos
 </div>
