--- a/src/app/ships/ships.component.html
+++ b/src/app/ships/ships.component.html
@@ -5,5 +5,5 @@
 ></app-starships-list>
 
 <div class="alert alert-danger" role="alert" *ngIf="error">
-  Ha habido un error al hacer la petición
+  No puedes hacer la misma petición en un mismo rango de 5 minutos
 </div>
